--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,9 +7,9 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.example.codechallenge.ui.home.HomeFragment"
+        android:name="com.example.codechallenge.ui.show.ShowFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_show" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
